force-app/main/default/objects/Data_Load__c/Data_Load__c.object-meta.xml
<CustomObject>
    <label>Data Load</label>
    <nameField>
        <label>Data Load Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Loads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>