force-app/main/default/objects/Data_Load__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>Field1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>